--- a/style.css
+++ b/style.css
@@ -16,8 +16,11 @@
   align-items: center;
   font-family: "myFont";
 }
-.navbar {
-  /* height: 90px !important; */
+.bgBackground{
+  background-image: url('https://t4.ftcdn.net/jpg/06/24/10/31/360_F_624103118_TZnDp6CRAXFruBnjch2rFYPrYRv2qRn1.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .container {
   /* / margin-left: 5px; */
