--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@
   font-family: "myFont";
 }
 .bgBackground{
+height: 100vh;
+width: 100vw;
   background-image: url('https://t4.ftcdn.net/jpg/06/24/10/31/360_F_624103118_TZnDp6CRAXFruBnjch2rFYPrYRv2qRn1.jpg');
   background-repeat: no-repeat;
   background-position: center;
