--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 .bgBackground{
 height: 100vh;
 width: 100vw;
+    gap: 19.5rem !important;
   background-image: url('https://t4.ftcdn.net/jpg/06/24/10/31/360_F_624103118_TZnDp6CRAXFruBnjch2rFYPrYRv2qRn1.jpg');
   background-repeat: no-repeat;
   background-position: center;
