--- a/style.css
+++ b/style.css
@@ -16,7 +16,30 @@
   align-items: center;
   font-family: "myFont";
 }
+.borderColor{
+  box-shadow: 0px 0px 15px yellowgreen !important;
+}
 .bgBackground{
+height: 100vh;
+width: 100vw;
+    gap: 19.5rem !important;
+  background-image: url('https://t4.ftcdn.net/jpg/06/24/10/31/360_F_624103118_TZnDp6CRAXFruBnjch2rFYPrYRv2qRn1.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.bgBackground1{
+height: 100vh;
+width: 100vw;
+    gap: 19.5rem !important;
+  background-image: url('https://t4.ftcdn.net/jpg/06/24/10/31/360_F_624103118_TZnDp6CRAXFruBnjch2rFYPrYRv2qRn1.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.bgBackground2{
 height: 100vh;
 width: 100vw;
     gap: 19.5rem !important;
