--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@
   box-shadow: 0px 0px 15px #626262 !important;
   background-color: transparent;
   width: 500px;
-  height: 500px;
+  height: 450px;
+  border-radius: 20px;
 }
 .bgBackground{
 height: 100vh;
