--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   font-family: "myFont";
 }
 .borderColor{
-  box-shadow: 0px 0px 15px #626262 !important;
+  box-shadow: 0px 0px 15px yellowgreen !important;
   background-color: transparent;
   width: 500px;
   height: 450px;
