--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ input {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 90px;
+  min-height: 90px;
   font-family: "myFont";
 }
 
