--- a/style.css
+++ b/style.css
@@ -366,19 +366,12 @@ input {
 
 /* media query */
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
+  .navbar-container {
+    justify-content: flex-start; 
+  }
 
-.container{
-  width: 100%;
-}
-.left{
-  width: 60%;
-}
-.right{
- width:40%;
- font-size: 16px;
- padding: 0px;
-}
-
-
+  .navbar-toggler {
+    margin-left: auto; 
+  }
 }
