--- a/style.css
+++ b/style.css
@@ -2,14 +2,34 @@
   font-family: "myFont";
   src: url(./Valty\ DEMO.otf);
 }
+
+.libertinus-serif-regular-italic {
+  font-family: "Libertinus Serif", serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
 .main {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-.navbarSize{
-  height: 185px !important;
+
+.navbarSize {
+  height: 180px !important;
 }
+
+.navbar-container {
+  justify-content: space-between;
+  width: 100%;
+}
+
+.card {
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .body {
   width: 100%;
   height: 100vh;
@@ -19,43 +39,39 @@
   align-items: center;
   font-family: "myFont";
 }
-.borderApp{
+
+.borderApp {
   box-shadow: 0px 0px 15px yellowgreen !important;
 }
-.borderColor{
+
+.borderColor {
   box-shadow: 0px 0px 15px yellowgreen !important;
   background-color: transparent;
   width: 500px;
   height: 450px;
   border-radius: 20px;
 }
-.bgBackground{
-height: 100vh;
-width: 100vw;
- background-color: black;
-}
 
-.bgBackground1{
-height: 100vh;
-width: 100vw;
- background-color: black;
-}
-
-.bgBackground2{
-height: 100vh;
-width: 100vw;
+.bgBackground {
+  height: 100vh;
+  width: 100vw;
   background-color: black;
+  overflow-x: hidden !important;
 }
+
 .container {
-  /* / margin-left: 5px; */
   width: 100%;
-  height: 450px;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 20px;
-  /* backdrop-filter: blur(10px); */
 }
+
+.margin {
+  margin-top: 150px;
+}
+
 .left {
   background-color: rgb(0, 0, 0);
   border-top-left-radius: 20px;
@@ -64,14 +80,15 @@ width: 100vw;
   width: 100%;
   height: 450px;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   border: 1px solid rgb(0, 0, 0);
   padding-left: 20px;
   padding-right: 20px;
   box-shadow: 3px 2px 10px grey;
 }
+
 .right {
   background-color: rgb(152, 102, 2) !important;
   background: transparent;
@@ -109,6 +126,7 @@ width: 100vw;
   box-shadow: 3px 2px 10px grey;
   /* font-size: 20px; */
 }
+
 .right2 {
   background-color: rgb(152, 102, 2) !important;
   background: transparent;
@@ -142,6 +160,7 @@ width: 100vw;
   width: 50px;
   height: 50px;
 }
+
 .btn2 {
   border-radius: 50%;
   border: 1px solid grey;
@@ -150,6 +169,7 @@ width: 100vw;
   width: 50px;
   height: 50px;
 }
+
 .btn3 {
   border-radius: 50%;
   border: 1px solid grey;
@@ -179,9 +199,11 @@ input {
   background-color: rgb(152, 102, 2);
   margin-left: 65px;
 }
+
 .signin:hover {
   cursor: pointer;
 }
+
 .signin2 {
   width: 150px;
   height: 40px;
@@ -194,9 +216,11 @@ input {
   background: black;
   box-shadow: 2px 2px 12px grey;
 }
+
 .signin2:hover {
   cursor: pointer;
 }
+
 .signin3 {
   width: 150px;
   height: 40px;
@@ -207,65 +231,54 @@ input {
   font-size: 15px;
   background-color: rgb(152, 102, 2);
 }
+
 .signin3:hover {
   cursor: pointer;
 }
 
 #loader-overlay {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100vw;
-	height: 100vh;
-	background-color: rgba(0, 0, 0, 0.4);
-	display: none;
-	align-items: center;
-	justify-content: center;
-	z-index: 9999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
 }
 
 #loader {
-	display: none;
-	width: 60px;
-	aspect-ratio: 2;
-	--_g: no-repeat radial-gradient(circle closest-side, #125b9a 90%, #0000);
-	background:
-		var(--_g) 0% 50%,
-		var(--_g) 50% 50%,
-		var(--_g) 100% 50%;
-	background-size: calc(100% / 3) 50%;
-	animation: l3 1s infinite linear;
+  display: none;
+  width: 60px;
+  aspect-ratio: 2;
+  --_g: no-repeat radial-gradient(circle closest-side, #125b9a 90%, #0000);
+  background:
+    var(--_g) 0% 50%,
+    var(--_g) 50% 50%,
+    var(--_g) 100% 50%;
+  background-size: calc(100% / 3) 50%;
+  animation: l3 1s infinite linear;
 }
 
 @keyframes l3 {
-	20% {
-		background-position: 0% 0%, 50% 50%, 100% 50%;
-	}
-	40% {
-		background-position: 0% 100%, 50% 0%, 100% 50%;
-	}
-	60% {
-		background-position: 0% 50%, 50% 100%, 100% 0%;
-	}
-	80% {
-		background-position: 0% 50%, 50% 50%, 100% 100%;
-	}
+  20% {
+    background-position: 0% 0%, 50% 50%, 100% 50%;
+  }
+
+  40% {
+    background-position: 0% 100%, 50% 0%, 100% 50%;
+  }
+
+  60% {
+    background-position: 0% 50%, 50% 100%, 100% 0%;
+  }
+
+  80% {
+    background-position: 0% 50%, 50% 50%, 100% 100%;
+  }
 }
-
-
-/* .navbar-collapse{ 
-  position: static !important;
-  z-index: auto !important;
-} */
-
-/* .navbar-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: start !;
-  width: 100%;
-  min-height: 90px;
-  font-family: "myFont";
-}  */
 
 .profile-section {
   display: flex;
@@ -352,9 +365,78 @@ input {
   bottom: 43px;
   left: 120px;
 }
+
 .eye2 {
   position: relative;
   bottom: 42px;
   left: 245px;
 }
 
+.swal2-input {
+  margin-left: 17px !important;
+  margin-bottom: 10px !important;
+}
+
+.swal2-popup,
+.swal2-modal,
+.swal2-show {
+  font-family: ui-sans-serif;
+  color: #f8f9fa !important;
+  background-color: black !important;
+  border: 1px solid #dc3545 !important;
+  border-radius: 35px !important;
+  box-shadow: 0px 0px 13px #f13434 !important;
+}
+
+.swal2-actions {
+  gap: 20px !important;
+}
+
+.swal2-confirm,
+.swal2-styled {
+  color: red;
+  display: inline-block;
+  background: transparent;
+  border: 1px solid red;
+}
+
+.swal2-cancel {
+  background-color: black;
+  display: inline-block;
+  color: red;
+}
+
+.hover:hover {
+  background: #efefef !important;
+}
+
+
+/* Media query */
+@media (max-width: 768px) {
+  .card {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (max-width: 769px) {
+
+  .mobile-login-btn,
+  .mobile-signup-btn {
+    display: block;
+    width: 100%;
+    margin-top: 15px;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    border-radius: 20px;
+    border: 1px solid grey;
+    height: 40px;
+    font-size: 16px;
+  }
+
+  .mobile-login-btn:hover,
+  .mobile-signup-btn:hover {
+    cursor: pointer;
+  }
+}
